# Gpat_Estrutural

./: .gitignore  CARGA_MOD_NEOENERGIA.py  CMakeLists.txt  cabos.py  elementos.py  mec_5422 copy.py  mec_5422.py  mec_5422_integrado.py  mudar_estado.cpp
